--- a/package.json
+++ b/package.json
@@ -10,16 +10,31 @@
   "author": "theotimefumex@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
+    "delivery": "0.0.6",
     "detect-ssid": "^1.0.3",
     "diskusage": "^1.1.3",
+    "exif-image-auto-rotation": "^1.0.3",
+    "exif-rotate": "0.0.3",
     "express": "^4.17.1",
+    "jpeg-autorotate": "^5.0.2",
+    "md5": "^2.2.1",
     "mime-types": "^2.1.24",
     "mmmagic": "^0.5.3",
+    "multer": "^1.4.2",
+    "node-hotspot": "^0.1.7",
+    "node-wifi": "^2.0.12",
+    "node-wifi-scanner": "^1.1.2-np",
+    "pi-wifi": "^1.2.0",
     "request": "^2.88.0",
     "request-progress": "^3.0.0",
     "serve-static": "^1.14.1",
+    "sharp": "^0.23.2",
     "snap-db": "^1.1.6",
     "socket.io": "^2.3.0",
-    "xml2js": "^0.4.22"
+    "whirlpool-js": "^1.0.0",
+    "wifi-control": "^2.0.1",
+    "xml2js": "^0.4.22",
+    "zafrani-rpi-wifiscanner": "^1.0.4"
   }
 }
