--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
   "name": "nitro",
-  "version": "1.0.0",
-  "description": "the free home assistant for Raspberry Pi.",
+  "version": "0.0.2",
+  "description": "Nitro assistant, the fastest daily help",
   "main": "app.js",
+  "author": "theotimefumex@gmail.com",
+  "license": "cc-by-nc-nd",
+  "keywords": [
+    "nitro",
+    "assistant",
+    "fast",
+    "storage",
+    "raspi",
+    "raspberry-pi",
+    "raspberry"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "author": "theotimefumex@gmail.com",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/theotime-me/nitro.git"
+  },
   "dependencies": {
     "chalk": "^2.4.2",
+    "connect-busboy": "0.0.2",
     "delivery": "0.0.6",
     "detect-ssid": "^1.0.3",
     "diskusage": "^1.1.3",
     "exif-image-auto-rotation": "^1.0.3",
     "exif-rotate": "0.0.3",
     "express": "^4.17.1",
+    "get-folder-size": "^2.0.1",
+    "handbrake-js": "^5.0.0",
     "jpeg-autorotate": "^5.0.2",
     "md5": "^2.2.1",
     "mime-types": "^2.1.24",
@@ -32,9 +48,11 @@
     "sharp": "^0.23.2",
     "snap-db": "^1.1.6",
     "socket.io": "^2.3.0",
+    "socket.io-stream": "^0.9.1",
+    "stream-body-parser": "0.0.1",
+    "stream-transcoder": "0.0.5",
     "whirlpool-js": "^1.0.0",
     "wifi-control": "^2.0.1",
-    "xml2js": "^0.4.22",
-    "zafrani-rpi-wifiscanner": "^1.0.4"
+    "xml2js": "^0.4.22"
   }
 }
