--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nitro",
-	"version": "0.0.7",
+	"version": "0.0.5",
 	"description": "Nitro assistant, the fastest daily help",
 	"main": "app.js",
 	"author": "theotimefumex@gmail.com",
@@ -40,6 +40,7 @@
 		"mime-types": "^2.1.24",
 		"mmmagic": "^0.5.3",
 		"multer": "^1.4.2",
+		"musicmetadata": "^2.0.5",
 		"ncp": "^2.0.0",
 		"node-hotspot": "^0.1.7",
 		"node-wifi": "^2.0.12",
