--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "nitro",
+	"name": "jonas-assistant",
 	"version": "0.0.8",
-	"description": "Nitro assistant, the fastest daily help",
+	"description": "Jonas assistant, the fastest daily help",
 	"main": "app.js",
 	"author": "theotimefumex@gmail.com",
 	"license": "CC-BY-NC-SA-4.0",
 	"keywords": [
-		"nitro",
+		"jonas",
 		"assistant",
 		"fast",
 		"storage",
@@ -20,7 +20,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/theotime-me/nitro"
+		"url": "https://github.com/theotime-me/jonas"
 	},
 	"dependencies": {
 		"chalk": "^2.4.2",
@@ -42,18 +42,22 @@
 		"multer": "^1.4.2",
 		"musicmetadata": "^2.0.5",
 		"ncp": "^2.0.0",
+		"node-hid": "^1.1.0",
 		"node-hotspot": "^0.1.7",
 		"node-wifi": "^2.0.12",
 		"node-wifi-scanner": "^1.1.2-np",
 		"pi-wifi": "^1.2.0",
+		"prebuild-install": "^5.3.3",
 		"request": "^2.88.0",
 		"request-progress": "^3.0.0",
+		"serve-favicon": "^2.5.0",
 		"serve-static": "^1.14.1",
 		"sharp": "^0.23.2",
 		"snap-db": "^1.1.6",
 		"socket.io": "^2.3.0",
 		"socket.io-stream": "^0.9.1",
 		"stream-body-parser": "0.0.1",
+		"stream-hash": "^1.0.2",
 		"stream-transcoder": "0.0.5",
 		"tar-pack": "^3.4.1",
 		"whirlpool-js": "^1.0.0",
