--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
         "device": "Raspberry-Pi",
         "lang": "fr",
         "devMode": true,
+        "logs": true,
         "isSetup": true
     },
     "interface": {
